force-app/main/default/objects/Contact/fields/MobilePhone_disp__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone_disp__c</fullName>
    <formula>IF(ISBLANK(MobilePhone), "", HYPERLINK("tel:" &amp; MobilePhone, IF(LEFT(MobilePhone, 3) = "+55", IF(LEN(MobilePhone) = 14, "+55 (" &amp; MID(MobilePhone, 4, 2) &amp; ") " &amp; MID(MobilePhone, 6, 5) &amp; "-" &amp; MID(MobilePhone, 11, 4), IF(LEN(MobilePhone) = 13, "+55 (" &amp; MID(MobilePhone, 4, 2) &amp; ") " &amp; MID(MobilePhone, 6, 4) &amp; "-" &amp; MID(MobilePhone, 10, 4), MobilePhone)), MobilePhone)) &amp; " " &amp; HYPERLINK("https://wa.me/" &amp; SUBSTITUTE(MobilePhone, "+", ""), IMAGE("/resource/WhatsAppIcon", "WhatsApp", 20, 20)))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Celular (exibição)</label>
    <type>Text</type>
</CustomField>